--- a/main-page.html
+++ b/main-page.html
@@ -5,6 +5,7 @@
   <head>
     <title>JPMorgan Chase</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+    <link rel="stylesheet" href="./main-page.css">
     <style>
       body {
         font-family: 'Roboto Mono', serif;
